feat/master/ft00-Login. Configuration of baseFragments, configuration of publicSection navigation. Now rendering login screen.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#1976d2</color>
     <color name="colorPrimaryDark">#004ba0</color>
     <color name="colorAccent">#e65100</color>
+    <color name="defaultTextColor">#282121</color>
+    <color name="lightTextColor">#FAFAFA</color>
+    <color name="buttonEnabledColor">#b71c1c</color>
+    <color name="buttonDisabledColor">#A79F9E</color>
 </resources>
