--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="basicTextStyle" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="titleTextStyleLight" parent="basicTextStyle">
+        <item name="android:textColor">@color/lightTextColor</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+    <style name="defaultTextStyle" parent="basicTextStyle">
+        <item name="android:textColor">@color/defaultTextColor</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="defaultLabelStyle" parent="basicTextStyle">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
